--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -4,7 +4,9 @@
   "description": "bases de node - primera app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "echo 'Hola mundo desde dev' "
   },
   "author": "Chema",
   "license": "MIT"
