--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev": "echo 'Hola mundo desde dev' "
+    "dev": "nodemon src/app.js",
+    "start:dev": "echo 'Hola mundo desde dev' "
   },
   "author": "Chema",
   "license": "MIT"
