--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "eslint": "8.51.0",
     "nodemon": "3.0.1",
     "standard": "17.1.0"
+  },
+  "dependencies": {
+    "get-age": "1.0.1",
+    "uuid": "9.0.1"
   }
 }
