--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "1.5.1",
     "get-age": "1.0.1",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "winston": "3.11.0"
   }
 }
