--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "02-bases"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "Chema",
@@ -25,7 +26,6 @@
     "@types/node": "20.8.4",
     "eslint": "8.51.0",
     "nodemon": "3.0.1",
-    "standard": "17.1.0",
     "typescript": "5.2.2"
   },
   "dependencies": {
