--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
   },
   "devDependencies": {
     "@types/node": "20.8.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "eslint": "8.51.0",
+    "eslint-config-standard-with-typescript": "39.1.1",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-n": "16.1.0",
+    "eslint-plugin-promise": "6.1.1",
     "nodemon": "3.0.1",
     "typescript": "5.2.2"
   },
