--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "dev": "nodemon",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/app.js"
   },
   "keywords": [],
   "author": "Chema",
@@ -24,14 +27,16 @@
   },
   "devDependencies": {
     "@types/node": "20.8.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@typescript-eslint/eslint-plugin": "6.7.5",
+    "@typescript-eslint/parser": "6.7.5",
     "eslint": "8.51.0",
     "eslint-config-standard-with-typescript": "39.1.1",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-n": "16.1.0",
     "eslint-plugin-promise": "6.1.1",
     "nodemon": "3.0.1",
+    "rimraf": "5.0.5",
+    "ts-node": "10.9.1",
     "typescript": "5.2.2"
   },
   "dependencies": {
