--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "url": "git+https://github.com/MrJark/nodejs-dt-0to10.git"
   },
   "workspaces": [
-    "02-bases"
+    "02-bases",
+    "03-TypeScript"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
