--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "20.8.4",
     "@typescript-eslint/eslint-plugin": "6.7.5",
     "@typescript-eslint/parser": "6.7.5",
+    "@types/uuid": "9.0.2",
     "eslint": "8.51.0",
     "eslint-config-standard-with-typescript": "39.1.1",
     "eslint-plugin-import": "2.28.1",
