--- a/package.json
+++ b/package.json
@@ -28,17 +28,21 @@
     "url": "https://github.com/MrJark/nodejs-dt-0to10/issues"
   },
   "devDependencies": {
+    "@types/jest": "29.5.5",
     "@types/node": "20.8.4",
+    "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "6.7.5",
     "@typescript-eslint/parser": "6.7.5",
-    "@types/uuid": "9.0.2",
     "eslint": "8.51.0",
     "eslint-config-standard-with-typescript": "39.1.1",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-n": "16.1.0",
     "eslint-plugin-promise": "6.1.1",
+    "jest": "29.7.0",
     "nodemon": "3.0.1",
     "rimraf": "5.0.5",
+    "supertest": "6.3.3",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
   },
