added eslint and tsconfig in 04 because there was problems with eslint and parserOptions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,12 @@
         "semi": [
             "error",
             "never"
+        ],
+        "no-unused-vars": [
+            "error"
+        ],
+        "no-trailing-spaces": [
+            "error"
         ]
     }
 }
