--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,12 @@
 {
+  // "include": [
+  //   "04-bases-to-test/src/**/*",
+  // ],
+  // "exclude": [
+  //   "node_modules",
+  //   "04-bases-to-test/**/*.spec.ts",
+  //   "04-bases-to-test/tests/**/*.test.ts"
+  // ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
     /* Projects */
@@ -23,7 +31,8 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
     /* Modules */
     "module": "commonjs", /* Specify what module code is generated. */
-    "rootDir": "03-TypeScript/src", /* Specify the root folder within your source files. */
+    // "rootDir": "03-TypeScript/src", /* Specify the root folder within your source files. */
+    "rootDir": "04-bases-to-test/src", /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
