--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "1.5.1",
     "get-age": "1.0.1",
     "uuid": "9.0.1",
-    "winston": "3.11.0"
+    "winston": "3.11.0",
+    "yargs": "17.7.2"
   }
 }
