--- a/05-multiplication/package.json
+++ b/05-multiplication/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node src/app.ts -b 10",
     "devLoggic": "npx ts-node src/app.logic.ts",
-    "dev:nodemon": "nodemon",
+    "dev:nodemon": "nodemon -b 3",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
   },
