--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,21 @@
   //   "04-bases-to-test/**/*.spec.ts",
   //   "04-bases-to-test/tests/**/*.test.ts"
   // ],
+  // "include": [
+  //   "05-multiplication/src/**/*",
+  // ],
+  // "exclude": [
+  //   "node_modules",
+  //   "05-multiplication/**/*.spec.ts",
+  //   "05-multiplication/tests/**/*.test.ts"
+  // ],
   "include": [
-    "05-multiplication/src/**/*",
+    "06-test-in-05/src/**/*",
   ],
   "exclude": [
     "node_modules",
-    "05-multiplication/**/*.spec.ts",
-    "05-multiplication/tests/**/*.test.ts"
+    "06-test-in-05/**/*.spec.ts",
+    "06-test-in-05/tests/**/*.test.ts"
   ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
@@ -40,7 +48,8 @@
     /* Modules */
     "module": "commonjs", /* Specify what module code is generated. */
     // "rootDir": "03-TypeScript/src", /* Specify the root folder within your source files. */
-    "rootDir": "05-multiplication/src", /* Specify the root folder within your source files. */
+    // "rootDir": "05-multiplication/src", /* Specify the root folder within your source files. */
+    "rootDir": "06-test-in-05/src", /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
