--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "eslint-plugin-n": "16.1.0",
     "eslint-plugin-promise": "6.1.1",
     "jest": "29.7.0",
-    "nodemon": "3.0.1",
     "rimraf": "5.0.5",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
     "typescript": "5.2.2"
   },
   "dependencies": {
