--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "axios": "1.5.1",
+    "cron": "3.1.3",
     "get-age": "1.0.1",
     "uuid": "9.0.1",
     "winston": "3.11.0",
