--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-n": "16.1.0",
     "eslint-plugin-promise": "6.1.1",
     "jest": "29.7.0",
+    "json-server": "0.17.4",
     "rimraf": "5.0.5",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
