--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   "dependencies": {
     "axios": "1.5.1",
     "cron": "3.1.3",
+    "dotenv": "16.3.1",
+    "env-var": "7.4.1",
     "get-age": "1.0.1",
     "uuid": "9.0.1",
     "winston": "3.11.0",
