--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "16.3.1",
     "env-var": "7.4.1",
     "get-age": "1.0.1",
+    "nodemailer": "6.9.7",
     "uuid": "9.0.1",
     "winston": "3.11.0",
     "yargs": "17.7.2"
