--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "29.5.5",
     "@types/node": "20.8.4",
+    "@types/nodemailer": "^6.4.13",
     "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "6.7.5",
     "@typescript-eslint/parser": "6.7.5",
