copy/past 09 into 10 to add MongoDB and PostgreSQL

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,13 +34,22 @@
   //   "07-NOC/tests/**/*.test.ts",
   //   "dist"
   // ],
+  // "include": [
+  //   "09-NOC/src/**/*",
+  // ],
+  // "exclude": [
+  //   "node_modules",
+  //   "09-NOC/**/*.spec.ts",
+  //   "09-NOC/tests/**/*.test.ts",
+  //   "dist"
+  // ],
   "include": [
-    "09-NOC/src/**/*",
+    "10-MongoDB_PostgreSQL/src/**/*",
   ],
   "exclude": [
     "node_modules",
-    "09-NOC/**/*.spec.ts",
-    "09-NOC/tests/**/*.test.ts",
+    "10-MongoDB_PostgreSQL/**/*.spec.ts",
+    "10-MongoDB_PostgreSQL/tests/**/*.test.ts",
     "dist"
   ],
   "compilerOptions": {
@@ -71,7 +80,8 @@
     // "rootDir": "05-multiplication/src", /* Specify the root folder within your source files. */
     // "rootDir": "06-test-in-05/src", /* Specify the root folder within your source files. */
     // "rootDir": "07-NOC/src", /* Specify the root folder within your source files. */
-    "rootDir": "09-NOC/src", /* Specify the root folder within your source files. */
+    // "rootDir": "09-NOC/src", /* Specify the root folder within your source files. */
+    "rootDir": "10-MongoDB_PostgreSQL/src", /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
