--- a/10-NOC_MongoDB_PostgreSQL/package.json
+++ b/10-NOC_MongoDB_PostgreSQL/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "prisma": "^5.5.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.5.2"
   }
 }
