--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/jest": "29.5.5",
     "@types/node": "20.8.4",
-    "@types/nodemailer": "^6.4.13",
+    "@types/nodemailer": "6.4.13",
     "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "6.7.5",
     "@typescript-eslint/parser": "6.7.5",
@@ -41,6 +41,7 @@
     "eslint-plugin-promise": "6.1.1",
     "jest": "29.7.0",
     "json-server": "0.17.4",
+    "prisma": "5.5.2",
     "rimraf": "5.0.5",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
@@ -54,7 +55,7 @@
     "dotenv": "16.3.1",
     "env-var": "7.4.1",
     "get-age": "1.0.1",
-    "mongoose": "^7.6.3",
+    "mongoose": "7.6.3",
     "nodemailer": "6.9.7",
     "uuid": "9.0.1",
     "winston": "3.11.0",
